--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,7 +1,12 @@
 ﻿@page "/"
+@inject IJSRuntime JSRuntime
 @using JDR.Models
 
 <PageTitle>JDR</PageTitle>
+
+<div id="header">
+    <h4>[Game name banner goes here]</h4>
+</div>
 
 <!-- Game container: Contains left, center and right panel -->
 <div id="game-container">
@@ -11,15 +16,15 @@
         <!-- Hero stats component -->
         <div id="hero-stats">
             <h4>Hero Stats</h4>
-            <div class="player">
-                <p><strong>Player's name:</strong> @hero?.CharacterName</p>
-                <p><strong>Level:</strong> @hero?.Level</p>
+            <div class="stats">
+                <h4><strong>@hero?.CharacterName</strong></h4>
+                <p><strong>Level </strong> @hero?.Level</p>
                 <p><strong>XP:</strong> @hero?.ExperienceValue / @hero?.ExperienceToNextLevel</p>
                 <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue</p>
                 <p><strong>Mana:</strong> @hero?.EnergyValue / @hero?.MaxEnergyValue</p>
                 <p><strong>Armor:</strong> @hero?.ArmorValue</p>
                 <p><strong>Attack:</strong> @hero?.AttackValue</p>
-                <p><strong>Bonus Dmg:</strong> + @hero?.BonusDamage</p>
+                <p><strong>Bonus Dmg:</strong> +@hero?.BonusDamage</p>
                 <p><strong>Crit Chance:</strong> @hero?.AttackValue%</p>
                 <p><strong>Haste:</strong> @hero?.AttackValue%</p>
                 <p><strong>Dodge:</strong> @hero?.AttackValue%</p>
@@ -28,15 +33,15 @@
 
         <!-- Hero inventory component -->
         <div id="hero-inventory">
-            <h4>Hero Inventory</h4>
-            <p>[Inventory details]</p>
+            <h4>Inventory</h4>
+            <div class="inventory">
+                <p><strong>[Inventory Content]</strong></p>
+            </div>
         </div>
     </div>
 
     <!-- Central panel : Map of the game -->
     <div id="center-panel">
-        <h4 id="center-panel-map">Map</h4>
-
         <div style="position: relative;">
             <div
                 class="grid"
@@ -73,40 +78,40 @@
         {
             <div id="fight">
                 <h4>Fight</h4>
-                <div class="players-container">
-                    <div class="player">
-                        <p><strong>Player's name:</strong> @hero?.CharacterName</p>
-                        <p><strong>Level:</strong> @hero?.Level</p>
-                        <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue HP</p>
-                        <p><strong>Energy:</strong> @hero?.EnergyValue / @hero.MaxEnergyValue Mana</p>
+                <div class="fight-container">
+                    <div class="hero">
+                        <h4><strong>@hero?.CharacterName</strong></h4>
+                        <p><strong>Level </strong> @hero?.Level</p>
+                        <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue</p>
+                        <p><strong>Mana:</strong> @hero?.EnergyValue / @hero.MaxEnergyValue</p>
                         <button class="btn btn-danger" @onclick="HeroAttack">Meteor Blast</button>
                     </div>
                     <div class="opponent">
-                        <p><strong>Monster's name:</strong> @monster?.CharacterName</p>
-                        <p><strong>Level:</strong> @monster?.Level</p>
-                        <p><strong>Health:</strong> @monster?.CurrentHealthValue / @monster?.MaxHealthValue HP</p>
+                        <h4><strong>@monster?.CharacterName</strong></h4>
+                        <p><strong>Level </strong> @monster?.Level</p>
+                        <p><strong>Health:</strong> @monster?.CurrentHealthValue / @monster?.MaxHealthValue</p>
                         <button class="btn btn-danger" @onclick="MonsterAttack">Base Attack</button>
                     </div>
                 </div>
             </div>
         }
-    </div>
-</div>
 
-<!-- Console component -->
-<div id="console">
-    <ConsoleComponent />
+        <!-- Console component -->
+        <div id="console">
+            <ConsoleComponent />
+        </div>
+    </div>
 </div>
 
 <!-- Popup for game over event -->
 @if (isGameOver)
 {
-<div class="popup-overlay">
-    <div class="popup">
-        <p>You died !</p>
-        <button class="btn btn-success" @onclick="RestartGame">Play again</button>
+    <div class="popup-overlay">
+        <div class="popup">
+            <p>You died !</p>
+            <button class="btn btn-success" @onclick="RestartGame">Play again</button>
+        </div>
     </div>
-</div>
 }
 
 @code {
@@ -131,10 +136,10 @@
     {
         if (hero != null && monster != null)
         {
-            // hero.Cast_BaseAttack(monster, RestartGame);
-            // hero.Cast_FrostSpikes(monster, RestartGame);
+            // hero.Cast_BaseAttack(monster, null);
+            // hero.Cast_FrostSpikes(monster, null);
             // hero.Cast_ArcaneShield(StateHasChanged);
-            hero.Cast_MeteorBlast(monster, RestartGame);
+            hero.Cast_MeteorBlast(monster, null);
             
             if (monster.CurrentHealthValue <= 0)
             {
@@ -145,16 +150,23 @@
         }
     }
 
+    // Manages the monsters' attacks
     private void MonsterAttack()
     {
         if (monster != null && hero != null)
         {
-            monster.Cast_BaseAttack(hero, RestartGame);
+            monster.Cast_BaseAttack(hero, GameOver);
             StateHasChanged();
         }
     }
+
+    private void GameOver()
+    {
+        isGameOver = true;
+    }
     
-    private void EndFight()
+    // Manages the end of the fight
+    private async void EndFight()
     {
         // Remove actual monster from list
         if (monster != null)
@@ -168,6 +180,7 @@
         
         isFighting = false; // Turns off combat UI
         monster = null;         // Reinitialize monster
+        await gridRef.FocusAsync(); // Makes the focus on the map
         StateHasChanged();  // Updates UI
     }
     
@@ -207,6 +220,7 @@
         return position;
     }
 
+    // Manages the keys' events
     private async void HandleKeyDown(KeyboardEventArgs e)
     {
         if (isFighting) return; // Player stays still on the map when fighting
@@ -238,11 +252,6 @@
             this.monster = new MonsterGoblin(hero.X, hero.Y); // Pass hero's X, Y coordinates
             this.monster.CalculateLevel(hero.Level); // CalculateLevel adjusts monster's level based on hero's level
             isFighting = true; // Turns on combat UI
-
-            if (hero.CurrentHealthValue <= 0)
-            {
-                isGameOver = true;
-            }
         }
 
         // Interaction with a fountain
@@ -254,19 +263,23 @@
         }
     }
 
-    private void RestartGame()
+    // Restarts a new game
+    private async void RestartGame()
     {
         isFighting = false;
         hero = new HeroMage("Ariana", levelProgression);
         GenerateEntities();
         isGameOver = false; // Turns off the game over popup
+        await gridRef.FocusAsync(); // Makes the focus on the map
     }
     
+    // Keep focus on the map ++ prevents page scrolling with arrow keys
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
             await gridRef.FocusAsync();
+            await JSRuntime.InvokeVoidAsync("preventArrowScroll");
         }
     }
     
