--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -2,6 +2,19 @@ html, body {
     font-family: "JetBrains Mono", monospace;
     background: #000512;
     color: #ddd;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#app {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+#app > * {
+    flex: 1;
 }
 
 h1 {
