--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -129,6 +129,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     text-align: center;
+    color: black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
