--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -10,66 +10,92 @@
 
 <!-- Game container: Contains left, center and right panel -->
 <div id="game-container">
-    
+
     <!-- Left panel: Hero setup, stats and inventory -->
     <div id="left-panel">
-        <!-- Hero stats component -->
-        <div id="hero-stats">
-            <h4>Hero Stats</h4>
-            <div class="stats">
-                <h4><strong>@hero?.CharacterName</strong></h4>
-                <p><strong>Level </strong> @hero?.Level</p>
-                <p><strong>XP:</strong> @hero?.ExperienceValue / @hero?.ExperienceToNextLevel</p>
-                <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue</p>
-                <p><strong>Mana:</strong> @hero?.EnergyValue / @hero?.MaxEnergyValue</p>
-                <p><strong>Armor:</strong> @hero?.ArmorValue</p>
-                <p><strong>Attack:</strong> @hero?.AttackValue</p>
-                <p><strong>Bonus Dmg:</strong> +@hero?.BonusDamage</p>
-                <p><strong>Crit Chance:</strong> @hero?.AttackValue%</p>
-                <p><strong>Haste:</strong> @hero?.AttackValue%</p>
-                <p><strong>Dodge:</strong> @hero?.AttackValue%</p>
+        @if (heroCreated)
+        {   <!-- Hero stats component -->
+            <div id="hero-stats">
+                <h4>Hero Stats</h4>
+                <div class="stats">
+                    <h4><strong>@hero?.Name</strong></h4>
+                    <p><strong>Level </strong> @hero?.Level</p>
+                    <p><strong>XP:</strong> @hero?.ExperienceValue / @hero?.ExperienceToNextLevel</p>
+                    <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue</p>
+                    <p><strong>Mana:</strong> @hero?.CurrentEnergyValue / @hero?.MaxEnergyValue</p>
+                    <p><strong>Armor:</strong> @hero?.ArmorValue</p>
+                    <p><strong>Attack:</strong> @hero?.AttackValue</p>
+                    <p><strong>Bonus Dmg:</strong> +@hero?.BonusDamage</p>
+                    <p><strong>Crit Chance:</strong> @hero?.AttackValue%</p>
+                    <p><strong>Haste:</strong> @hero?.AttackValue%</p>
+                    <p><strong>Dodge:</strong> @hero?.AttackValue%</p>
+                </div>
             </div>
-        </div>
 
-        <!-- Hero inventory component -->
-        <div id="hero-inventory">
-            <h4>Inventory</h4>
-            <div class="inventory">
-                <p><strong>[Inventory Content]</strong></p>
+            <!-- Hero inventory component -->
+            <div id="hero-inventory">
+                <h4>Inventory</h4>
+                <div class="inventory">
+                    <p><strong>[Inventory Content]</strong></p>
+                </div>
             </div>
-        </div>
+        } else {   
+            <!-- Hero creation component -->
+            <h4>Create your hero</h4>
+            <form @onsubmit="StartGame">
+                <div>
+                    <label for="characterName">Name your hero :</label><br/>
+                    <input type="text" id="characterName" @bind="CharacterName" required />
+                </div>
+                <br />
+                <div>
+                    <label for="characterClass">Choose a class :</label><br/>
+                    <select id="characterClass" @bind="CharacterClass" required>
+                        <option value="Choose a class" disabled selected>Choose a class</option>
+                        <option value="Mage">Mage</option>
+                        <option value="Warrior" disabled>Warrior</option>
+                        <option value="Archer" disabled>Archer</option>
+                    </select>
+                </div>
+                <br />
+                <button class="btn btn-danger" type="submit">Start the game!</button>
+            </form>
+        }
     </div>
 
     <!-- Central panel : Map of the game -->
     <div id="center-panel">
-        <div style="position: relative;">
-            <div
+        @if (heroCreated)
+        {
+            <div style="position: relative;">
+                <div
                 class="grid"
                 tabindex="0"
                 @onkeydown="HandleKeyDown"
                 @ref="gridRef"
                 autofocus>
-                @for (int row = 0; row < GridSize; row++)
-                {
-                    @for (int col = 0; col < GridSize; col++)
+                    @for (int row = 0; row < GridSize; row++)
                     {
-                        var cellContent = "";
-                        if (row == hero.Y && col == hero.X)
-                            cellContent = $"sprite {hero.FacingDirection}";
-                        else if (monsters.Any(m => m.X == col && m.Y == row))
-                            cellContent = "monster";
-                        else if (fountains.Any(m => m.X == col && m.Y == row))
-                            cellContent = "fountain";
-                        <div class="cell @cellContent"></div>
+                        @for (int col = 0; col < GridSize; col++)
+                        {
+                            var cellContent = "";
+                            if (row == hero.Y && col == hero.X)
+                                cellContent = $"sprite {hero.FacingDirection}";
+                            else if (monsters.Any(m => m.X == col && m.Y == row))
+                                cellContent = "monster";
+                            else if (fountains.Any(m => m.X == col && m.Y == row))
+                                cellContent = "fountain";
+                            <div class="cell @cellContent"></div>
+                        }
                     }
+                </div>
+
+                @if (isFighting)
+                {
+                    <div class="grid-overlay"></div> <!-- Grays out the map when hero is fighting -->
                 }
             </div>
-
-            @if (isFighting)
-            {
-                <div class="grid-overlay"></div> <!-- Grays out the map when hero is fighting -->
-            }
-        </div>
+        }
     </div>
 
     <!-- Right panel : Fight interface -->
@@ -80,14 +106,14 @@
                 <h4>Fight</h4>
                 <div class="fight-container">
                     <div class="hero">
-                        <h4><strong>@hero?.CharacterName</strong></h4>
+                        <h4><strong>@hero?.Name</strong></h4>
                         <p><strong>Level </strong> @hero?.Level</p>
-                        <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue</p>
-                        <p><strong>Mana:</strong> @hero?.EnergyValue / @hero.MaxEnergyValue</p>
+                        <p><strong>Health:</strong> @hero?.CurrentHealthValue / @hero?.MaxHealthValue HP</p>
+                        <p><strong>Energy:</strong> @hero?.CurrentEnergyValue / @hero.MaxEnergyValue Mana</p>
                         <button class="btn btn-danger" @onclick="HeroAttack">Meteor Blast</button>
                     </div>
                     <div class="opponent">
-                        <h4><strong>@monster?.CharacterName</strong></h4>
+                        <h4><strong>@monster?.Name</strong></h4>
                         <p><strong>Level </strong> @monster?.Level</p>
                         <p><strong>Health:</strong> @monster?.CurrentHealthValue / @monster?.MaxHealthValue</p>
                         <button class="btn btn-danger" @onclick="MonsterAttack">Base Attack</button>
@@ -117,10 +143,13 @@
 @code {
     // Fight component properties
     private readonly LevelProgression levelProgression = new();
-    private HeroMage hero;
-    private MonsterGoblin? monster;
+    private Hero? hero;
+    private Monster? monster;
     private bool isFighting = false;
-    
+    private bool heroCreated = false;
+    private string CharacterName;
+    private string CharacterClass;
+
     // Map component properties
     private const int GridSize = 10;
     private ElementReference gridRef;
@@ -130,22 +159,22 @@
     private Random random = new();
     private DateTime lastMovementTime = DateTime.MinValue;
     private readonly TimeSpan debounceDelay = TimeSpan.FromMilliseconds(100);
-    
+
     // Fight component methods
     private void HeroAttack()
     {
         if (hero != null && monster != null)
         {
-            // hero.Cast_BaseAttack(monster, null);
-            // hero.Cast_FrostSpikes(monster, null);
-            // hero.Cast_ArcaneShield(StateHasChanged);
-            hero.Cast_MeteorBlast(monster, null);
-            
+            // hero.BaseAttack(monster, null);
+            // hero.LowTierAttack(monster, null);
+            // hero.MidTierAttack(StateHasChanged);
+            hero.UltimateAttack(monster, null);
+
             if (monster.CurrentHealthValue <= 0)
             {
                 EndFight(); // Ends fight when monster is killed
             }
-            
+
             StateHasChanged();
         }
     }
@@ -155,8 +184,12 @@
     {
         if (monster != null && hero != null)
         {
-            monster.Cast_BaseAttack(hero, GameOver);
+            monster.BaseAttack(hero, GameOver);
             StateHasChanged();
+        }
+        if (hero.CurrentHealthValue == 0)
+        {
+            isGameOver = true;
         }
     }
 
@@ -164,7 +197,7 @@
     {
         isGameOver = true;
     }
-    
+
     // Manages the end of the fight
     private async void EndFight()
     {
@@ -177,15 +210,15 @@
                 monsters.Remove(monsterToRemove);
             }
         }
-        
+
         isFighting = false; // Turns off combat UI
         monster = null;         // Reinitialize monster
         await gridRef.FocusAsync(); // Makes the focus on the map
         StateHasChanged();  // Updates UI
     }
-    
+
     // Map component methods
-    
+
     // Generates entities at random location on the map
     private void GenerateEntities()
     {
@@ -196,7 +229,7 @@
         for (int i = 0; i < 5; i++)
         {
             (int x, int y) = GetRandomPosition();
-            monsters.Add(new MonsterGoblin(x, y));
+            monsters.Add(new MonsterGoblin(x, y, hero.Level));
         }
 
         // Generates 3 fountains at random location
@@ -216,15 +249,16 @@
         } while (
             monsters.Any(m => m.X == position.X && m.Y == position.Y) ||
             fountains.Any(f => f.X == position.X && f.Y == position.Y) ||
-            (position.X == hero.X && position.Y == hero.Y));
+            (position.X == hero.X && position.Y == hero.Y)
+        );
         return position;
     }
 
     // Manages the keys' events
-    private async void HandleKeyDown(KeyboardEventArgs e)
+    private void HandleKeyDown(KeyboardEventArgs e)
     {
         if (isFighting) return; // Player stays still on the map when fighting
-        
+
         var now = DateTime.Now;
         if (now - lastMovementTime < debounceDelay) return; // Ignores if too quick
 
@@ -233,9 +267,7 @@
             string direction = e.Key.Replace("Arrow", ""); // Extract "Up", "Down", "Left", or "Right"
             hero.Move(direction, GridSize);
             CheckInteractions();    
-            lastMovementTime = now; // Updates th last movement time
-            await Task.Delay(50); // Delay before triggering new update
-            StateHasChanged(); // Updates UI after delay
+            lastMovementTime = now; // Updates the last movement time
         }
     }
 
@@ -245,13 +277,11 @@
         var playerPosition = (hero.X, hero.Y);
 
         // Interaction with a monster
-        var monster = monsters.FirstOrDefault(m => (m.X, m.Y) == playerPosition);
+        monster = monsters.FirstOrDefault(m => (m.X, m.Y) == playerPosition);
         if (monster != null)
         {
-            // Create new monster
-            this.monster = new MonsterGoblin(hero.X, hero.Y); // Pass hero's X, Y coordinates
-            this.monster.CalculateLevel(hero.Level); // CalculateLevel adjusts monster's level based on hero's level
             isFighting = true; // Turns on combat UI
+            StateHasChanged();
         }
 
         // Interaction with a fountain
@@ -260,36 +290,42 @@
         {
             LifeFountain.HealPlayer(hero);
             fountains.Remove(fountain);
+            StateHasChanged();
         }
     }
 
     // Restarts a new game
-    private async void RestartGame()
+    private void RestartGame()
     {
+        heroCreated = false;
         isFighting = false;
-        hero = new HeroMage("Ariana", levelProgression);
-        GenerateEntities();
         isGameOver = false; // Turns off the game over popup
-        await gridRef.FocusAsync(); // Makes the focus on the map
     }
-    
+
+    private void StartGame()
+    {
+        hero = Hero.CreateHero(CharacterClass, CharacterName);
+        heroCreated = true;
+        GenerateEntities();
+        StateHasChanged();
+    }
+
     // Keep focus on the map ++ prevents page scrolling with arrow keys
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            await gridRef.FocusAsync();
             await JSRuntime.InvokeVoidAsync("preventArrowScroll");
+            if (heroCreated && gridRef.Context != null)
+            {
+                await gridRef.FocusAsync();
+            }
         }
     }
-    
+
     // OnInitialized method
     protected override void OnInitialized()
     {
-        // Initialize hero
-        hero = new HeroMage("Ariana", levelProgression);
-        
-        // Initialize map
-        GenerateEntities(); // Initialize the map with foes and life fountains
+        RestartGame();
     }
 }
