--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -182,6 +182,10 @@ body {
     background-color: #d9534f;
 }
 
+.boss {
+    background-color: #444444;
+}
+
 .fountain {
     background-color: lightblue;
     background-image: url('./images/fountain.gif');
