--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -8,7 +8,7 @@
         max-width: 100%;
         min-width: 100%;
     }
-    
+
     #center-panel {
         margin: 10px;
     }
@@ -45,6 +45,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding-left: 10px;
 }
 
 /* Center panel */
@@ -57,6 +58,7 @@ body {
     align-content: center;
     justify-content: flex-start;
     position: relative;
+    margin: 0 auto;
 }
 
 /* Right panel */
@@ -69,6 +71,7 @@ body {
     gap: 10px;
     overflow: hidden;
     min-height: 100%;
+    padding-right: 10px;
 }
 
 /* Allows content above #console to occupy available space */
@@ -80,28 +83,6 @@ body {
 /* Pushes #console to the bottom */
 #console {
     margin-top: auto;
-}
-
-.grid {
-    display: grid;
-    grid-template-rows: repeat(10, 64px);
-    grid-template-columns: repeat(10, 64px);
-    gap: 2px;
-    width: 100%;
-    max-width: 658px;
-    outline: 2px solid black; /* Remove outline on focus */
-    margin: 0 auto;
-}
-
-.grid-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* 60% transparency black, modify if too light or too dark */
-    pointer-events: none; /* Let events play */
-    z-index: 10; /* Place overlay over the map */
 }
 
 .popup-overlay {
@@ -117,13 +98,6 @@ body {
     z-index: 1000;
 }
 
-.cell {
-    width: 64px;
-    height: 64px;
-    background-color: lightgray;
-    border: 1px solid #ddd;
-}
-
 .popup {
     background-color: white;
     padding: 20px;
@@ -137,34 +111,6 @@ body {
     margin-top: 10px;
 }
 
-@keyframes spriteAnimation {
-    from {
-        background-position: 0px;
-    }
-
-    to {
-        background-position: -384px;
-    }
-    /* 64px x 6 frames */
-}
-
-.sprite {
-    width: 64px; /* width of frame */
-    height: 64px; /* height of frame */
-    background-image: url('./images/Run-Sheet.png');
-    background-repeat: no-repeat;
-    animation: spriteAnimation 0.8s steps(6) infinite;
-    transform-origin: center center;
-}
-
-.Right {
-    transform: scaleX(1);
-}
-
-.Left {
-    transform: scaleX(-1);
-}
-
 #header {
     width: 100%;
     background-color: #1a1e21;
@@ -176,18 +122,6 @@ body {
     text-align: center;
     width: 100%;
     margin: 10px;
-}
-
-.monster {
-    background-color: #d9534f;
-}
-
-.fountain {
-    background-color: lightblue;
-    background-image: url('./images/fountain.gif');
-    background-repeat: no-repeat;
-    background-size: 50px;
-    background-position: center;
 }
 
 #hero-stats h4:first-of-type, #hero-inventory h4, #fight h4:first-of-type {
