--- a/Pages/MapComponent.razor
+++ b/Pages/MapComponent.razor
@@ -30,6 +30,7 @@
 @code {
     [Parameter] public Hero Hero { get; set; } = null!;
     [Parameter] public bool HeroCreated { get; set; }
+    [Parameter] public EventCallback<Hero> OnHeroStatsUpdated { get; set; }
     [Parameter] public EventCallback<Monster> OnFight { get; set; } // Get infos of the monster for the fight
     [Parameter] public EventCallback<bool> OnFightStateChange { get; set; } // Notifies state of isFighting in Home.razor (true/false)
     [Parameter] public Func<bool>? IsFighting { get; set; }
@@ -52,21 +53,11 @@
                 map = new Map(10, 10, Hero); // 10x10 Grid
                 monsters = map.Monsters;
                 fountains = map.Fountains;
-
-                Console.WriteLine("Map successfully initialized.");
             }
         }
         catch (Exception ex)
         {
             Console.WriteLine($"Error during map initialization: {ex.Message}");
-        }
-    }
-    
-    protected override void OnAfterRender(bool firstRender)
-    {
-        if (firstRender)
-        {
-            Console.WriteLine($"Map dimensions: {map?.RowCount} rows x {map?.ColCount} cols");
         }
     }
     
@@ -124,6 +115,7 @@
         {
             LifeFountain.HealPlayer(Hero);
             map.Fountains.Remove(fountain);
+            OnHeroStatsUpdated.InvokeAsync(Hero);
             StateHasChanged();
         }
     }
