Fix 03: Added reference to the new Boss monster

--- a/Pages/MapComponent.razor.css
+++ b/Pages/MapComponent.razor.css
@@ -48,6 +48,10 @@
     background-color: #d9534f;
 }
 
+.boss {
+    background-color: #444444;
+}
+
 .fountain {
     background-color: lightblue;
     background-image: url('./images/fountain.gif');
