Fixed the method to calculate MaxEnergyValue after the LevelUp method is called to avoid miscalculation, fixed a bug where AttackValue was displayed instead of CriticalChance, HasteValue and DodgeRating ine the hero-stats panel.

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -27,9 +27,9 @@
                     <p><strong>Armor:</strong> @hero?.ArmorValue</p>
                     <p><strong>Attack:</strong> @hero?.AttackValue</p>
                     <p><strong>Bonus Dmg:</strong> +@hero?.BonusDamage</p>
-                    <p><strong>Crit Chance:</strong> @hero?.AttackValue%</p>
-                    <p><strong>Haste:</strong> @hero?.AttackValue%</p>
-                    <p><strong>Dodge:</strong> @hero?.AttackValue%</p>
+                    <p><strong>Crit Chance:</strong> @hero?.CriticalChance%</p>
+                    <p><strong>Haste:</strong> @hero?.HasteValue%</p>
+                    <p><strong>Dodge:</strong> @hero?.DodgeRating%</p>
                 </div>
             </div>
 
