--- a/Pages/MapComponent.razor.css
+++ b/Pages/MapComponent.razor.css
@@ -18,7 +18,7 @@
 
 @keyframes heroSpriteAnimation {
     from {
-        background-position: 0px;
+        background-position: 0;
     }
 
     to {
