Remise au propre branche treasure avec implementation dans le nouveau main

--- a/Pages/MapComponent.razor.css
+++ b/Pages/MapComponent.razor.css
@@ -16,7 +16,7 @@
     border: 1px solid #ddd;
 }
 
-@keyframes spriteAnimation {
+@keyframes herospriteAnimation {
     from {
         background-position: 0px;
     }
@@ -27,12 +27,30 @@
     /* 64px x 6 frames */
 }
 
-.sprite {
+.herosprite {
     width: 64px; /* width of frame */
     height: 64px; /* height of frame */
     background-image: url('./images/Run-Sheet.png');
     background-repeat: no-repeat;
-    animation: spriteAnimation 0.8s steps(6) infinite;
+    animation: herospriteAnimation 0.8s steps(6) infinite;
+    transform-origin: center center;
+}
+
+@keyframes treasureAnimation {
+    from {
+        background-position: 0;
+    }
+    to {
+        background-position: -189px; /* Largeur totale de l'image */
+    }
+}
+
+.treasure {
+    width: 64px; /* Largeur d'une frame */
+    height: 64px; /* Hauteur d'une frame */
+    background-image: url('./images/Chest.png'); /* Chemin vers ton sprite */
+    background-repeat: no-repeat;
+    animation: treasureAnimation 0.8s steps(3) infinite;
     transform-origin: center center;
 }
 
